Backend/egd-user-with-quarkus/kubernetes/postgres_config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dbegd-postgres
  namespace: student-b-kadir
  labels:
    app: dbegd
    tier: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dbegd
      tier: database
  template:
    metadata:
      labels:
        app: dbegd
        tier: database
    spec:
      containers:
        - name: postgres
          image: postgres:13.5
          imagePullPolicy: "IfNotPresent"
          resources:
            limits:
              memory: 512Mi
              cpu: "0.5"
            requests:
              memory: 128Mi
              cpu: "0.1"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb             
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: dbegd-postgres-claim
---
apiVersion: v1
kind: Service
metadata:
 name: dbegd-postgres
 namespace: student-b-kadir
 labels:
   app: dbegd
spec:
  type: NodePort
  ports:
    - port: 5432
  selector:
    app: dbegd
    tier: database
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: angular-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
spec:
  rules:
    - host: student.cloud.htl-leonding.ac.at
      http:
        paths:
          - path: /b.kadir/egd-user-with-quarkus/(.*)$
            pathType: Prefix
            backend:
              service:
                name: egd-user-with-quarkus
                port:
                  number: 80
